--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.equitel.pruebaequitel">
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -12,6 +13,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PruebaEquitel"
         android:usesCleartextTraffic="true">
+        <activity
+            android:name=".Signatures.SignatureActivity"
+            android:exported="false" />
         <activity
             android:name=".Sheet6.Sheet6Activity"
             android:exported="false" />
