--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,6 +70,9 @@ dependencies {
 
     //pdf
     implementation 'io.github.muddz:quickshot:1.4.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation 'com.github.barteksc:android-pdf-viewer:2.8.2'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
     //demasiado grande
     implementation 'com.gu.android:toolargetool:0.3.0'
